// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VRadio.js should be render colored radio 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 24 24"
           role="img"
           aria-hidden="true"
           class="v-icon__svg"
      >
        <path d="M12,20C7.58,20 4,16.42 4,12C4,7.58 7.58,4 12,4C16.42,4 20,7.58 20,12C20,16.42 16.42,20 12,20M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z">
        </path>
      </svg>
    </span>
    <input aria-checked="false"
           id="input-22"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.js should not render aria-label attribute with no label value on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 24 24"
           role="img"
           aria-hidden="true"
           class="v-icon__svg"
      >
        <path d="M12,20C7.58,20 4,16.42 4,12C4,7.58 7.58,4 12,4C16.42,4 20,7.58 20,12C20,16.42 16.42,20 12,20M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z">
        </path>
      </svg>
    </span>
    <input aria-checked="false"
           id="input-4"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.js should render proper input name 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 24 24"
           role="img"
           aria-hidden="true"
           class="v-icon__svg"
      >
        <path d="M12,20C7.58,20 4,16.42 4,12C4,7.58 7.58,4 12,4C16.42,4 20,7.58 20,12C20,16.42 16.42,20 12,20M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2Z">
        </path>
      </svg>
    </span>
    <input aria-checked="false"
           id="input-7"
           role="radio"
           type="radio"
           name="name"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.js should render role and aria-checked attributes on input group 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light primary--text"
    >
      <svg xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 24 24"
           role="img"
           aria-hidden="true"
           class="v-icon__svg"
      >
        <path d="M12,20C7.58,20 4,16.42 4,12C4,7.58 7.58,4 12,4C16.42,4 20,7.58 20,12C20,16.42 16.42,20 12,20M12,2C6.48,2 2,6.48 2,12C2,17.52 6.48,22 12,22C17.52,22 22,17.52 22,12C22,6.48 17.52,2 12,2M12,7C9.24,7 7,9.24 7,12C7,14.76 9.24,17 12,17C14.76,17 17,14.76 17,12C17,9.24 14.76,7 12,7Z">
        </path>
      </svg>
    </span>
    <input aria-checked="true"
           id="input-1"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple primary--text">
    </div>
  </div>
</div>
`;

exports[`VRadio.js should use custom icons 1`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light"
    >
      <svg-icon class="v-icon__component theme--light">
      </svg-icon>
    </span>
    <input aria-checked="false"
           id="input-13"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple">
    </div>
  </div>
</div>
`;

exports[`VRadio.js should use custom icons 2`] = `
<div class="v-radio theme--light">
  <div class="v-input--selection-controls__input">
    <span aria-hidden="true"
          class="v-icon notranslate theme--light primary--text"
    >
      <svg-icon class="v-icon__component theme--light">
      </svg-icon>
    </span>
    <input aria-checked="true"
           id="input-13"
           role="radio"
           type="radio"
           value
    >
    <div class="v-input--selection-controls__ripple primary--text">
    </div>
  </div>
</div>
`;
